<resources>
    <string name="app_name">InventoryApp</string>
    <string name="name_title_text">Item Name:</string>
    <string name="price_title_text">Price:</string>
    <string name="quantity_title_text">Quantity:</string>
    <string name="supplier_title_text">Supplier:</string>
    <string name="sale_button_text">Sale</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="add_new_item_text">Add New Item</string>
    <string name="action_save">Save Item</string>
    <string name="action_delete">Delete</string>
    <string name="action_modify_quanity">Modify Quantity</string>
    <string name="order_btn_text">ORDER</string>
    <string name="delete_btn_text">Delete Item</string>
    <string name="delete_dialog_msg">Are you sure to delete this item ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="selectImage">Select Image</string>
    <string name="image">Image Uri:</string>
    <string name="Ok">OK</string>

    <!--ERROR MESSAGES-->
    <string name="name_error_msg">Invalid Item Name Value</string>
    <string name="price_error_msg">Invalid Price Value</string>
    <string name="quantity_error_msg">Invalid Quantity Value</string>
    <string name="supplier_error_msg">Invalid Supplier Value</string>
    <string name="contact_info_error_msg">Contact Info is not Valid</string>
    <string name="supplier_contacts_title">Supplier Contacts (Phone or Email):</string>
    <string name="emptyList">There is no item in the database to be displayed</string>
</resources>
