<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Inventory Item name-->
        <TextView
            android:id="@+id/item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold|italic"/>

        <!--Price-->
        <LinearLayout
            style="@style/layout_item_prop">

            <TextView
                style="@style/text_view_props_style"
                android:text="@string/price_title_text"
                />

            <TextView
                android:id="@+id/price_text"
                style="@style/text_view_item_content_key_style"
                />

        </LinearLayout>

        <!--Publication date-->
        <LinearLayout
            style="@style/layout_item_prop">

            <TextView
                style="@style/text_view_props_style"
                android:text="@string/quantity_title_text"
                />

            <TextView
                android:id="@+id/quantity_text"
                style="@style/text_view_item_content_key_style"
                />

        </LinearLayout>

        <!--Supplier Text -->
        <LinearLayout
            style="@style/layout_item_prop">

            <TextView
                style="@style/text_view_props_style"
                android:text="@string/supplier_title_text"
                />

            <TextView
                android:id="@+id/supplier_text"
                style="@style/text_view_item_content_key_style"
                />

        </LinearLayout>

        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/sale_button_text"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_item_source"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"/>

</RelativeLayout>